<?xml version="1.0"?>
<package format="2">
  <name>template_package</name>
  <version>0.0.0</version>
  <description>Template package</description>


  <maintainer email="rafael.novack07@gmail.com">Rafael Novack</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>
</package>
